--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Theme Color -->
-    <meta name="theme-color" content="#050816" />
+    <meta name="theme-color" content="#03001C" />
     <!-- Description -->
     <meta
       name="description"
@@ -17,11 +17,11 @@
     <!-- Keywords -->
     <meta
       name="keywords"
-      content="reactjs, react, porfolio-app, three-js, modern-ui/ux, js, javascript, html, css, tailwindcss"
+      content=""
     />
     <!-- Author -->
-    <meta name="author" content="Sanidhya Kr. Verma" />
-    <link rel="author" href="https://github.com/sanidhyy" />
+    <meta name="author" content="Javair Waheed" />
+    <link rel="author" href="" />
 
     <!-- Icon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" sizes="any" />
@@ -38,7 +38,7 @@
     <meta name="color-scheme" content="dark" />
 
     <!-- Title -->
-    <title>Shubham | Portfolio</title>
+    <title>Javair Waheed</title>
   </head>
   <body>
     <noscript></noscript>
